 - Everything which uses those methods now handles the list object instead
    of the array.
 - Added a new method to EPrints::List: merge, which creates a new list 
    containing all the records from two existing lists.
 - Set CGI module to compile on load, this may be slightly more efficient
    under mod_perl.
 - Added a new mode to session, mode 2, which means online, but ignore the
    CGI data (so it's not consumed by the authentication sessions).
 - Just in case, uploaded files filehandles are reset to the start of the
    file.
 - If there is a problem with the eval code in AnApache, it will now quit
    reporting the problem.
 - bin/export now quits with an error if an invalid plugin is selected. 

2006-02-13 cjg

 - Changed the OAI plugin config to be a hash not an array. This means that
    the metadataPrefix does not have to be the plugin id.
 - Added a new oai output plugin for the UK ETD project at the BL. It's 
    enabled by default.
 - Made eprints type an oai set to help the ETD project.

2006-02-13 cjg

 - Added SOAP methods to add/remove files. add/remove documents and modify
    eprints and documents.
 - Cleaned up WSDL generator to be more simple.

2006-02-13 tdb

 - Added prepare_cmd to EPrints::Utils. Prepares a command as specified in
   SystemSettings by substituting named variables.
 - Cleaned up help text for get_input_hidden
 - Fixed abort() location in bin/startup.pl
 - Plain-text conversion now uses Convert plugin(s)
 - Added search-like ability to Convert::can_convert

2006-02-14 tdb

 - DC Output: Changed abstract page to be relation and full-text links to be
   identifier
 - Changed Convert/pdftotext.pm to PlainText.pm
 - Added support for antiword, ps2ascii, elinks (if configured in SystemSettings)
 - Removed Convert/* modules (superceded by EPrints::Plugin::Convert)

2006-02-16 cjg

 - Fixed bug in SearchExpression - didn't correctly extract the ID of 
    output plugins. (due to change from / to :: as the seperator).